# discord-auto-translator

./: .env.example  .gitignore  Cargo.toml  LICENSE  README-de.md  README-es.md  README-fr.md  README-id.md  README-it.md  README-ja.md  README-ko.md  README-pt-BR.md  README-th.md  README-vi.md  README-zh-CN.md  README-zh-TW.md  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/discord-auto-translator/: guild_lifecycle.go  guild_lifecycle_test.go  main.go  main_test.go  retention.go  retention_test.go  role_color.go  role_color_test.go
deploy/: deploy-gce.ps1  deploy.json.example
docs/: DEV_NOTES.md  SPEC.md  discord-thread-message-sync.md
internal/legalpages/: legalpages.go  legalpages_test.go
internal/translatorbot/: avatar.go  avatar_test.go  bedrock_translator.go  bedrock_translator_test.go  cloudflare_translator.go  cloudflare_translator_test.go  commands.go  commands_test.go  config.go  config_test.go  content.go  discord_client.go  discord_client_test.go  discord_links.go  discord_links_test.go  discord_retry.go  discord_retry_test.go  feedback_hint.go  feedback_hint_test.go  languages.go  models.go  placeholders.go  placeholders_test.go  ratelimit.go  ratelimit_test.go  role_color.go  role_color_test.go  service.go  service_forward.go  service_message.go  service_sync.go  service_test.go  service_thread.go  source_allowlist.go  store.go  store_test.go  styles.go  styles_test.go  translator.go  translator_test.go  (+4 more)
locales/: en.yml  ja.yml
src/: data.rs  entities.rs  error.rs  handler.rs  main.rs
src/commands/: translate.rs
src/entities/: channel.rs  guild.rs  message.rs  mod.rs  (+1 more)
(+17 files in other folders)
