[package]
name = "discord-auto-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror= "1"
dotenv = "0.15.0"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
regex = "1"
poise = { version = "0.5.2", features = ["cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
once_cell = "1.17.1"
rust-i18n = "1"
deepl = "0.4.1"
url = "2.3.1"
