[package]
name = "discord-auto-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror= "1"
dotenvy = "0.15"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ] }
regex = "1"
poise = { version = "0.6", features = ["cache"] }
secrecy = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rust-i18n = "3"
deepl = "0.4"
url = "2.5"
